Knife Tool fail if camera is too close to the object and mouse away from object #65585

Closed
opened 2019-06-07 03:59:49 +02:00 by Massimiliano Puliero · 25 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 425.31

Blender Version
Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-04 22:32, hash: e80cbdac33
Worked: 2.79

Short description of error
If the camera is too close to the object the knife tool fail to follow the direction of the pointer. (in both ortho and perspective)

Exact steps for others to reproduce the error
Please open the attached file and try to cut some edges as I do in the video.

Thank you

knf.avi
knife.blend

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 425.31 **Blender Version** Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-04 22:32, hash: `e80cbdac33` Worked: 2.79 **Short description of error** If the camera is too close to the object the knife tool fail to follow the direction of the pointer. (in both ortho and perspective) **Exact steps for others to reproduce the error** Please open the attached file and try to cut some edges as I do in the video. Thank you [knf.avi](https://archive.blender.org/developer/F7091061/knf.avi) [knife.blend](https://archive.blender.org/developer/F7091062/knife.blend)

Added subscriber: @MassimilianoPuliero

Added subscriber: @MassimilianoPuliero

#82395 was marked as duplicate of this issue

#82395 was marked as duplicate of this issue

#76639 was marked as duplicate of this issue

#76639 was marked as duplicate of this issue

#76239 was marked as duplicate of this issue

#76239 was marked as duplicate of this issue

#70384 was marked as duplicate of this issue

#70384 was marked as duplicate of this issue

#69412 was marked as duplicate of this issue

#69412 was marked as duplicate of this issue

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Wasn't able to play your video, but the knife tool seems to work correctly here.

Wasn't able to play your video, but the knife tool seems to work correctly here.

Hi, I can play the video using vlc.
anyway I put it on dropbox that eventually encoded it better:

https://www.dropbox.com/s/0lz62d2gg7p7i1m/knf.avi?dl=0

thankyou

Hi, I can play the video using vlc. anyway I put it on dropbox that eventually encoded it better: https://www.dropbox.com/s/0lz62d2gg7p7i1m/knf.avi?dl=0 thankyou

I bump this since I didn't get any response.

Thank you

I bump this since I didn't get any response. Thank you

Added subscriber: @mont29

Added subscriber: @mont29

I can confirm that behavior here using given .blend file and also from default startup cube. Just close zoom-in, and as soon as the cursor goes outside of the edited mesh while drawing a cut stroke, things go wrong…

I can confirm that behavior here using given .blend file and also from default startup cube. Just close zoom-in, and as soon as the cursor goes outside of the edited mesh while drawing a cut stroke, things go wrong…

Added subscribers: @Pinnhead, @mano-wii, @lichtwerk

Added subscribers: @Pinnhead, @mano-wii, @lichtwerk
Philipp Oeser changed title from knife tool fail if camera is too close to the object to Knife Tool fail if camera is too close to the object and mouse away from object 2019-09-03 11:31:46 +02:00

Added subscriber: @Gunzes

Added subscriber: @Gunzes

Problem here too, after using knife tool there are 19 vertices instead of 9 :( . Almost everytime Im using this tool I need to manually weld verts, merging by distance isnt helping here (increasing weld range is welding my other parts of the object)
image.png

Problem here too, after using knife tool there are 19 vertices instead of 9 :( . Almost everytime Im using this tool I need to manually weld verts, merging by distance isnt helping here (increasing weld range is welding my other parts of the object) ![image.png](https://archive.blender.org/developer/F7779658/image.png)

@Gunzes : your issue seems to be the same as #62285 (Knife Tool produces bad geometry in certain cases (disconnected edges/vertices, overlapping faces)) -- not sure if this is realted to this one though...

@Gunzes : your issue seems to be the same as #62285 (Knife Tool produces bad geometry in certain cases (disconnected edges/vertices, overlapping faces)) -- not sure if this is realted to this one though...

Added subscribers: @RobertS, @INeedMana

Added subscribers: @RobertS, @INeedMana

Added subscribers: @NahuelBelich, @iss

Added subscribers: @NahuelBelich, @iss

Added subscriber: @MaximTkachenko

Added subscriber: @MaximTkachenko

Added subscriber: @Lipo

Added subscriber: @Lipo

Added subscriber: @patjan

Added subscriber: @patjan
Janusch Patas self-assigned this 2020-11-08 23:39:52 +01:00

I have crafted a fix for this issue. It can be found in D9509

I have crafted a fix for this issue. It can be found in [D9509](https://archive.blender.org/developer/D9509)

This issue was referenced by 19b85c5f4b

This issue was referenced by 19b85c5f4b0e937f231b86a5788cfaea5a27e26f

This issue was referenced by b902edae75

This issue was referenced by b902edae75c7087d08339fdf03d132341df1f277

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65585
There is no content yet.