Fix T65585: Knife fails when cursor away from the object

Zeroed mouse coordinates were being used making projection fail.